@@ -143,8 +143,6 @@ SourceForge is a <B>free service to
 easy access to the best in CVS, mailing lists, bug tracking, message boards/forums,
 task management, site hosting, permanent file archival, full backups,
 and total web-based administration. 
-<A href="/docman/display_doc.php?docid=753&group_id=1"><font size="-1">[ more ]</font></A>
-<A href="/docman/display_doc.php?docid=756&group_id=1"><font size="-1">[ FAQ ]</font></A>
 <BR>
 &nbsp;
 <P>
