@@ -189,8 +189,6 @@ class Layout extends Error {
 			$params['title'] = "SourceForge: " . $params['title'];
 		}
 		?>
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"
-	"http://www.w3.org/TR/REC-html40/loose.dtd">
 
 <html lang="<?php echo $Language->getLanguageCode(); ?>">
   <head>
